# simple-rag-langchain

./: .env.example  .gitignore  01_Introduction_and_Fundamentals.ipynb  02_Document_Loaders.ipynb  03_Text_Splitting_Strategies.ipynb  04_Embeddings_and_Vector_Representations.ipynb  05_Vector_Stores.ipynb  06_Retrieval_Strategies.ipynb  07_Complete_RAG_Pipeline.ipynb  08_External_Index_Retrievers.ipynb  10_RAG_Evaluation_with_Ragas.ipynb  11_RAG_Evaluation_with_LLM_Judge.ipynb  12_RAGAS_Metrics_Deep_Dive.ipynb  README.md  Vector_Stores_Tutorial.ipynb  local_rag_ollama.ipynb  main.py  pyproject.toml  simple_rag_langchain.ipynb  simple_rag_langchain.py
sample_data/: products.csv
